# pikachu

./: .gitignore  1amu.cif  LICENSE.txt  README.md  Scratch.py  __init__.py  adenylation-2.py  adenylation.py  blossom_algorithm.py  combine_structure.py  conftest.py  data.txt  drawing.py  ecfp4.py  find_cycles.py  find_rings.py  graph_to_smiles.py  groupdefiner.py  math_functions.py  methionines_in_mibig.py  molfile.mol  molfile_dkit.mol  parsers.py  pikachu.py  pikachu_errors.py  pyproject.toml  rapidass.py  reactions.py  rings.py  setup.py  sssr.py  terpenes.py  test.mol  test.py  test.txt  test2.txt
__pycache__/: combine_structure-2.py
data/: D-trp.mol  _clashing_steric.txt  chembl_30_failed.txt  drawing_validation.txt  drawing_validation_npatals_wrongly_drawn.txt  drawing_validation_npatlas.txt
edmonds-blossom/: LICENSE  README.md  max_matching.py  test.py
example_scripts/: amino_acid_composition.py  correctness_analysis.py  daptomycin.smi  draw_molecule_rdkit.py  draw_npatlas_structures.py  ketoreductase.py  rdkit_sulfur.mol  rdkitstamp.mol  read_chembl.py  read_valency_5.py  ring_detection_visualisation.py  substructure_test.py  tanimoto_distance.py  test.py  test_svg_drawer.py
example_structures/: failed_npatlas_smiles_pikachu.txt  npatlas_smiles.txt  smiles_interpretation.txt  test.txt
examples/: graph_to_smiles.py  nrps_structure.py
pikachu/: errors.py  general.py  math_functions.py  pikachu.py  test.py
pikachu.egg-info/: PKG-INFO  SOURCES.txt
pikachu_chem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
refactor/: atom.py  atom_properties.py  (+16 more)
(+90 files in other folders)
