[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pikachu-chem"
version = "1.1.0"
description = "PIKACHU: Python-based Informatics Kit for Analysing CHemical Units."
long_description = "An easy-to-use cheminformatics kit with few dependencies."
authors = ["Barbara Terlouw <barbara.terlouw@wur.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"

[tool.poetry.packages]
include = ["pikachu"]